<resources>
    <string name="app_name">Augmented WarZone</string>
    <string name="action_settings">Settings</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_logout">Logout</string>
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="walking">Walking</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
    <string name="longitude">LONGITUDE</string>
    <string name="latitude">LATITUDE</string>
    <string name="magnetometer">MAGNETOMETER DATA</string>
    <string name="gyroscope">GYROSCOPE DATA</string>
    <string name="accelerometer">ACCELEROMETER DATA</string>
    <string name="master_data">MASTER DATA</string>
    <string name="activity_recognition">Activity Recognition</string>
    <string name="map">TRACK ON MAP</string>
    <string name="remove_activity_updates">Remove Activity Updates</string>
    <string name="request_activity_updates">Request Activity Updates</string>
    <string name="accelerometer_data">ACCELEROMETER DATA</string>
    <string name="x_axis">X-Axis</string>
    <string name="_0_0">0.0</string>
    <string name="y_axis">Y-Axis</string>
    <string name="z_axis">Z-Axis</string>
    <string name="gyroscope_data">GYROSCOPE DATA</string>
    <string name="magnetometer_data">MAGNETOMETER DATA</string>
    <string name="scan_quick_response_code">Scan Quick Response Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="generate_location_qr_code">Generate Location QR Code</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="location_based_qr_code">Location-based QR Code</string>
    <string name="face_detection">Face Detection</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="video_face_detection">REALTIME DETECTION</string>
    <string name="opencv">AR OpenCV Realtime</string>
</resources>
