<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/map"
        android:background="@drawable/track_on_map"
        android:layout_width="160dp"
        android:layout_height="238dp"
        android:onClick="newMapActivityOnClick"
        android:text="@string/map"
        android:textStyle="bold"
        android:textSize="21sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button2"
        android:layout_toLeftOf="@+id/button2" />

    <Button
        android:background="@drawable/core"
        android:layout_width="140dp"
        android:layout_height="238dp"
        android:onClick="newDataActivityOnClick"
        android:text="@string/master_data"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="21sp"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/opencv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2"
        android:background="@drawable/identify"
        android:onClick="newOpenCVActivityOnClick"
        android:text="@string/opencv"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="21dp"
        android:textStyle="bold"
        android:layout_above="@+id/map" />

</RelativeLayout>